sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:4: error: not enough arguments for method setValeur: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
    var v = setValeur(i)
                     ^